# alphaforge

./: Cargo.toml  README.md
benches/: prediction_bench.rs
data/trained_models/: model.json
docs/: architecture.mmd  ml_flow.mmd
src/: lib.rs  main.rs
src/data/: mod.rs
src/features/: technical.rs
src/models/: linear_model.rs
src/strategies/: ml_strategy.rs  mod.rs
