[package]
name = "alphaforge"
version = "1.0.0"
edition = "2021"
authors = ["Gabriel Demetrios Lafis"]
description = "Machine Learning Trading Bot with predictive models and adaptive strategies"
license = "MIT"
repository = "https://github.com/gabriellafis/alphaforge"
keywords = ["trading", "machine-learning", "ai", "prediction", "reinforcement-learning"]
categories = ["finance", "science"]

[dependencies]
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.36", features = ["serde-float"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ndarray = "0.16"
ndarray-rand = "0.15"
ndarray-stats = "0.6"
polars = { version = "0.46", features = ["lazy", "dtype-date", "parquet", "csv"] }
linfa = "0.7"
linfa-linear = "0.7"
linfa-logistic = "0.7"
reqwest = { version = "0.12", features = ["json"] }
csv = "1.3"
rand = "0.8"
clap = { version = "4.5", features = ["derive"] }
plotters = "0.3"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "prediction_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
